# python-computer-sdk

./: .bumpversion.toml  .coveragerc  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: e2e-tests.yml  publish.yml  tests.yml
.windsurf/workflows/: arch.md  cli.md  computer-mcp-manage.md  desktop.md  feature-resource.md  test-struct.md  vrl.md
a2c_smcp/: __init__.py  main.py  smcp.py
a2c_smcp/agent/: base.py  client.py  sync_client.py
a2c_smcp/computer/: computer.py  types.py
a2c_smcp/computer/cli/: interactive_impl.py  main.py  utils.py
a2c_smcp/computer/desktop/: organize.py
a2c_smcp/computer/inputs/: render.py  resolver.py
a2c_smcp/computer/mcp_clients/: base_client.py  base_client.pyi  http_client.py  manager.py  model.py  sse_client.py  stdio_client.py  utils.py
a2c_smcp/computer/socketio/: client.py  smcp.py  types.py
a2c_smcp/mcp_clients/: manager.py  model.py
a2c_smcp/server/: __init__.py  namespace.py  sync_namespace.py  utils.py
a2c_smcp/utils/: __init__.py  logger.py  window_uri.py
a2c_smcp_cc/: __init__.py  base.py  computer.py
a2c_smcp_cc/cli/: interactive_impl.py  main.py  utils.py
a2c_smcp_cc/inputs/: base.py  cli_io.py  render.py  resolver.py
a2c_smcp_cc/mcp_clients/: base_client.py  base_client.pyi  clients.py  http_client.py  manager.py  model.py  sse_client.py  stdio_client.py  utils.py
a2c_smcp_cc/socketio/: client.py  smcp.py
a2c_smcp_cc/utils/async_property/: base.py
docs/: a2c_with_ide4ai.md  agent.md  cli.md  index.md  inputs_config.md  mcp_server_config.md  server.md
tests/: __init__.py
tests/e2e/: conftest.py  test_async_integration_e2e.py  test_async_integration_vrl_e2e.py  test_cli_inputs_resolve.py  test_cli_interactive.py  test_cli_mcp_config_start.py  test_cli_mcp_servers.py  test_cli_run_with_config.py
tests/e2e/agent/: conftest.py  test_async_agent_e2e.py  test_sync_agent_e2e.py
tests/e2e/computer/: test_cli_desktop_e2e.py  test_cli_history.py  test_cli_mcp_servers.py  test_cli_tc.py  test_cli_tc_vrl.py
tests/e2e/configs/: inputs_basic.json  server_direct_execution.json
tests/e2e/server/: conftest.py  test_async_server_e2e.py  test_server_e2e.py
tests/integration_tests/: conftest.py  mock_socketio_server.py  mock_sync_smcp_server.py  test_computer.py
tests/integration_tests/agent/: test_async_client.py  test_auth.py  test_base.py  test_sync_client.py  test_sync_client_desktop.py
tests/integration_tests/cli/: test_main.py
tests/integration_tests/computer/: conftest.py  test_computer.py
tests/integration_tests/mcp_clients/: test_manager.py  test_sse_client.py  test_stdio_client.py  test_utils.py
tests/integration_tests/server/: _local_sync_server.py  test_namespace_async.py  test_namespace_sync.py
tests/integration_tests/socketio/: mock_socketio_server.py  test_client.py
tests/intergration_tests/: conftest.py  test_computer.py
tests/intergration_tests/cli/: test_main.py
tests/intergration_tests/mcp_clients/: conftest.py  test_http_client.py  test_sse_client.py  test_stdio_client.py  test_utils.py
tests/intergration_tests/mcp_servers/: streamable_http_server.py  test_param_server.py
tests/intergration_tests/socketio/: test_client.py
tests/unit_tests/: test_computer.py  test_computer_exceptions.py  test_computer_input_values.py  test_computer_inputs.py
tests/unit_tests/agent/: test_agent_desktop.py  test_async_client.py  test_auth.py  test_sync_client.py
tests/unit_tests/cli/: test_inputs_value_cli.py  test_main.py  test_main_more.py  test_utils.py
(+62 files in other folders)
