[project]
name = "a2c-smcp-cc"
version = "0.1.0"
description = "The official Python Computer Client SDK for A2C-SMCP"
authors = [
    {name = "JQQ",email = "jqq1716@gmail.com"}
]
license = {text = "MIT license"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "mcp (>=1.13.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "transitions (>=0.9.3,<0.10.0)",
    "python-socketio (>=5.13.0,<6.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.9"


[tool.poetry.group.test.dependencies]
polyfactory = "^2.22.2"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
