[project]
name = "a2c-smcp-cc"
version = "0.1.0"
description = "The official Python Computer Client SDK for A2C-SMCP"
authors = [
    {name = "JQQ",email = "jqq1716@gmail.com"}
]
license = {text = "MIT license"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "mcp (>=1.13.0,<2.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "transitions (>=0.9.3,<0.10.0)",
    "python-socketio (>=5.13.0,<6.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.9"
mypy = "^1.17.1"
poethepoet = "^0.37.0"


[tool.poetry.group.test.dependencies]
polyfactory = "^2.22.2"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
pytest-mock = "^3.14.1"
inline-snapshot = "^0.27.2"
pytest-dotenv = "^0.5.2"
aiohttp = "^3.12.15"
pexpect = "^4.9.0"


[tool.poetry.group.cli.dependencies]
typer = "^0.17.4"
rich = "^14.1.0"
prompt-toolkit = "^3.0.52"

# 添加 extras 部分定义可选依赖组

[tool.poetry.group.build.dependencies]
bump-my-version = "^1.2.3"

[tool.poetry.extras]
cli = ["typer", "rich", "prompt-toolkit"]
dev = ["pytest", "ruff", "mypy", "poethepoet"]
test = ["polyfactory", "pytest-asyncio", "pytest-cov", "pytest-mock", "inline-snapshot", "pytest-dotenv", "aiohttp"]


[tool.poetry.scripts]
a2c-computer = "a2c_smcp_cc.cli.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest tests tests/unit_tests tests/integration_tests"
test-cov = "pytest tests -m 'not e2e' --cov a2c_smcp_cc --cov-report=term-missing --cov-fail-under=0 --cov-config=.coveragerc"
test-e2e = "pytest tests -m e2e"
lint = "ruff check --fix ."
format = "ruff format ."